--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "json-server": "^0.16.1",
     "prop-types": "^15.7.2",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
